# smart-meeting-agent

./: .gitignore  Dockerfile  README.md  dockerfile  lol.md  meeting_briefing.md  pyproject.toml  render.yaml  requirements.txt  run_api.py
.portia/cache/agent_memory/prun-026a8bbb-5a8b-4995-9a7d-2c541c67a648/: $attendee_profiles.json
.portia/cache/agent_memory/prun-0b3ef223-c835-4eb1-b96a-a6860722c2da/: $linkedin_profiles.json
.portia/cache/agent_memory/prun-64a96279-6b95-44ca-a08c-cfa27d2deaee/: $final_briefing.json
.portia/cache/agent_memory/prun-c7795044-6f13-4160-9222-2c9dfe23bee0/: $attendee_research_results.json  $attendee_search_queries.json  $meeting_briefs.json
.portia/cache/agent_memory/prun-cf62f0dd-5d56-4bf6-bace-b276b95b958b/: $calendar_events.json
.portia/cache/agent_memory/prun-e2735700-7ae5-41ce-8d08-46fbe1ae9e64/: $attendee_info.json
.portia/cache/agent_memory/prun-edb0efb3-9710-41a6-b375-541d31e0c221/: $attendee_details.json
agents/: __init__.py  agenda_builder.py  calendar_agent.py  context_briefings_agent.py  coordinator_agent.py  documentation_agent.py  github_issues_agent.py  github_repository_agent.py  people_research_agent.py  pre_read_agent.py  slack_agent.py  technical_context_agent.py  technology_stack_agent.py
app/: main.py  shared.py
app/v1/models/: agenda_models.py  agent_models.py  meeting_models.py  technical_models.py
app/v1/routes/: agenda_routes.py  agents.py  health.py  meetings.py  technical_agents.py
app/v1/services/: agenda_service.py  agent_service.py  meeting_service.py  technical_agent_service.py
