[project]
name = "smart-meeting-agent"
version = "1.0.0"
description = "Multi-agent system for comprehensive meeting preparation"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "gunicorn>=21.2.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "google-api-python-client>=2.108.0",
    "tavily-python>=0.3.3",
    "httpx>=0.25.2",
    "portia-sdk-python[tools-browser-browserbase]>=0.6.2,<0.7.0",
    "portia-sdk-python[google]"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "agents*"]

[project.scripts]
smart-meeting-agent = "app.main:app"
